force-app/main/default/objects/MZ_Item__c/MZ_Item__c.object-meta.xml
<CustomObject>
    <label>アイテム</label>
    <nameField>
        <label>アイテム名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>アイテム</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>