force-app/main/default/objects/MZ_Item__c/fields/MZ_Category__c.field-meta.xml
<CustomField>
    <fullName>MZ_Category__c</fullName>
    <label>カテゴリ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MZ_Category</valueSetName>
    </valueSet>
</CustomField>