force-app/main/default/objects/MZ_Item__c/fields/MZ_Collar__c.field-meta.xml
<CustomField>
    <fullName>MZ_Collar__c</fullName>
    <label>襟</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MZ_SubCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MZ_Collar</valueSetName>
    </valueSet>
</CustomField>