force-app/main/default/objects/MZ_Item__c/fields/MZ_ContentBodyId__c.field-meta.xml
<CustomField>
    <fullName>MZ_ContentBodyId__c</fullName>
    <label>コンテンツボディID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>