force-app/main/default/objects/MZ_Item__c/fields/MZ_ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>MZ_ContentVersionId__c</fullName>
    <label>コンテンツバージョンID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>