force-app/main/default/objects/MZ_Item__c/fields/MZ_Design__c.field-meta.xml
<CustomField>
    <fullName>MZ_Design__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>デザイン</label>
    <referenceTo>MZ_Design__c</referenceTo>
    <relationshipLabel>アイテム</relationshipLabel>
    <relationshipName>MZ_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>