force-app/main/default/objects/MZ_Item__c/fields/MZ_Front__c.field-meta.xml
<CustomField>
    <fullName>MZ_Front__c</fullName>
    <label>フロント</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MZ_SubCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MZ_Front</valueSetName>
    </valueSet>
</CustomField>