force-app/main/default/objects/MZ_Item__c/fields/MZ_Hood__c.field-meta.xml
<CustomField>
    <fullName>MZ_Hood__c</fullName>
    <defaultValue>false</defaultValue>
    <label>フード</label>
    <type>Checkbox</type>
</CustomField>