force-app/main/default/objects/MZ_Item__c/fields/MZ_ImageFileExtension__c.field-meta.xml
<CustomField>
    <fullName>MZ_ImageFileExtension__c</fullName>
    <label>画像ファイル拡張子</label>
    <length>50</length>
    <type>Text</type>
</CustomField>