force-app/main/default/objects/MZ_Item__c/fields/MZ_ItemImage__c.field-meta.xml
<CustomField>
    <fullName>MZ_ItemImage__c</fullName>
    <formula>IF(
NOT( ISBLANK( MZ_ContentVersionId__c )), 
IMAGE(&quot;https://wise-goat-7438ot-dev-ed.trailblaze.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_&quot;&amp;
  CASE( MZ_ImageFileExtension__c, &quot;jpg&quot;, &quot;Jpg&quot;, &quot;jpeg&quot;, &quot;Jpeg&quot;, &quot;png&quot;, &quot;Png&quot;, &quot;&quot;)&amp;
  &quot;&amp;versionId=&quot;&amp; MZ_ContentVersionId__c &amp;&quot;&amp;operationContext=CHATTER&amp;contentId=&quot;&amp; MZ_ContentBodyId__c , &quot;&quot;),
NULL
)</formula>
    <label>アイテム画像</label>
    <type>Text</type>
</CustomField>