force-app/main/default/objects/MZ_Item__c/fields/MZ_ItemImage_Display__c.field-meta.xml
<CustomField>
    <fullName>MZ_ItemImage_Display__c</fullName>
    <formula>IF(
  NOT(
    ISBLANK(MZ_ItemImageURL__c)
  ), 
  IMAGE(MZ_ItemImageURL__c,  Name, 50, 50), 
  NULL
)</formula>
    <label>アイテム画像_表示用</label>
    <type>Text</type>
</CustomField>