force-app/main/default/objects/MZ_Item__c/fields/MZ_ItemImageURL__c.field-meta.xml
<CustomField>
    <fullName>MZ_ItemImageURL__c</fullName>
    <label>アイテム画像URL</label>
    <type>Url</type>
</CustomField>