force-app/main/default/objects/MZ_Item__c/fields/MZ_ItemURL__c.field-meta.xml
<CustomField>
    <fullName>MZ_ItemURL__c</fullName>
    <formula>IF(
NOT( ISBLANK( MZ_ContentVersionId__c )), 
&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_&quot;&amp;
  CASE( MZ_ImageFileExtension__c, &quot;jpg&quot;, &quot;Jpg&quot;, &quot;jpeg&quot;, &quot;Jpeg&quot;, &quot;png&quot;, &quot;Png&quot;, &quot;&quot;)&amp;
  &quot;&amp;versionId=&quot;&amp; MZ_ContentVersionId__c &amp;&quot;&amp;operationContext=CHATTER&amp;contentId=&quot;&amp; MZ_ContentBodyId__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アイテムURL</label>
    <type>Text</type>
</CustomField>