force-app/main/default/objects/MZ_Item__c/fields/MZ_ItemURLText__c.field-meta.xml
<CustomField>
    <fullName>MZ_ItemURLText__c</fullName>
    <label>アイテムURL（テキスト）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>