force-app/main/default/objects/MZ_Item__c/fields/MZ_Length__c.field-meta.xml
<CustomField>
    <fullName>MZ_Length__c</fullName>
    <label>着丈・袖丈・総丈</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MZ_SubCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MZ_Length</valueSetName>
    </valueSet>
</CustomField>