force-app/main/default/objects/MZ_Item__c/fields/MZ_Material__c.field-meta.xml
<CustomField>
    <fullName>MZ_Material__c</fullName>
    <label>素材</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MZ_Material</valueSetName>
    </valueSet>
</CustomField>