force-app/main/default/objects/MZ_Item__c/fields/MZ_Neck__c.field-meta.xml
<CustomField>
    <fullName>MZ_Neck__c</fullName>
    <label>ネック</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MZ_SubCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MZ_Neck</valueSetName>
    </valueSet>
</CustomField>