force-app/main/default/objects/MZ_Item__c/fields/MZ_PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>MZ_PurchaseDate__c</fullName>
    <label>購入年月日</label>
    <type>Date</type>
</CustomField>