force-app/main/default/objects/MZ_Item__c/fields/MZ_PurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>MZ_PurchasePrice__c</fullName>
    <label>購入価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>