force-app/main/default/objects/MZ_Item__c/fields/MZ_PurchaseShop__c.field-meta.xml
<CustomField>
    <fullName>MZ_PurchaseShop__c</fullName>
    <label>購入ショップ</label>
    <length>50</length>
    <type>Text</type>
</CustomField>