force-app/main/default/objects/MZ_Item__c/fields/MZ_Silhouette__c.field-meta.xml
<CustomField>
    <fullName>MZ_Silhouette__c</fullName>
    <label>シルエット</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MZ_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MZ_Silhouette</valueSetName>
    </valueSet>
</CustomField>