force-app/main/default/objects/MZ_Item__c/fields/MZ_Style__c.field-meta.xml
<CustomField>
    <fullName>MZ_Style__c</fullName>
    <label>スタイル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MZ_Style</valueSetName>
    </valueSet>
</CustomField>