force-app/main/default/objects/MZ_Item__c/fields/MZ_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>MZ_SubCategory__c</fullName>
    <label>サブカテゴリ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MZ_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MZ_SubCategory</valueSetName>
    </valueSet>
</CustomField>