force-app/main/default/objects/MZ_Item__c/fields/MZ_Type__c.field-meta.xml
<CustomField>
    <fullName>MZ_Type__c</fullName>
    <label>型</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MZ_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MZ_Type</valueSetName>
    </valueSet>
</CustomField>