force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Bag_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Bag_RecordType</fullName>
    <active>true</active>
    <label>07_バッグ</label>
</RecordType>