force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Bottoms_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Bottoms_RecordType</fullName>
    <active>true</active>
    <label>05_パンツ</label>
</RecordType>