force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Master_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Master_RecordType</fullName>
    <active>true</active>
    <label>マスター</label>
</RecordType>