force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_OtherItem_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_OtherItem_RecordType</fullName>
    <active>true</active>
    <label>99_その他アイテム</label>
</RecordType>