force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Outer_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Outer_RecordType</fullName>
    <active>true</active>
    <label>01_アウター</label>
</RecordType>