force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Shoes_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Shoes_RecordType</fullName>
    <active>true</active>
    <label>08_シューズ</label>
</RecordType>