force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Skirt_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Skirt_RecordType</fullName>
    <active>true</active>
    <label>06_スカート・ワンピース</label>
</RecordType>