force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Tops_Common_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Tops_Common_RecordType</fullName>
    <active>true</active>
    <label>04_トップス_共通</label>
</RecordType>