force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Tops_Knit_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Tops_Knit_RecordType</fullName>
    <active>true</active>
    <label>02_トップス_ニット・スウェット・Tシャツ</label>
</RecordType>