force-app/main/default/objects/MZ_Item__c/recordTypes/MZ_Tops_Shirt_RecordType.recordType-meta.xml
<RecordType>
    <fullName>MZ_Tops_Shirt_RecordType</fullName>
    <active>true</active>
    <label>03_トップス_シャツ</label>
</RecordType>