force-app/main/default/objects/MZ_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MZ_ItemImage__c</columns>
    <columns>NAME</columns>
    <columns>MZ_Category__c</columns>
    <columns>MZ_SubCategory__c</columns>
    <columns>MZ_Color__c</columns>
    <columns>MZ_Style__c</columns>
    <columns>MZ_PurchaseShop__c</columns>
    <columns>MZ_PurchasePrice__c</columns>
    <columns>MZ_PurchaseDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>